채팅 앱 프로젝트 재개 ``` 현재까지의 진척 : 홈화면(index.html) 구현, 채팅화면 골격 세팅 및 [폴더트리] 매칭 파일 셋업 완료 ``` 금일 커밋 내용  : Date 함수 사용하여 앱 화면 상단의 현재 시간을 실시간으로 표기할 수 있도록 js 추가.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="status_bar">
-      <div>10:43</div>
+      <div id="clock">10:43</div>
       <div>
         <i class="fa-solid fa-signal fa-xs"></i>
         <i class="fa-solid fa-wifi fa-xs"></i>
@@ -41,5 +41,6 @@
       src="https://kit.fontawesome.com/2cb7ce3cc7.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/common.js"></script>
   </body>
 </html>
