--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Status Bar : Start -->
     <div class="status_bar">
-      <div>10:43</div>
+      <div id="clock">10:43</div>
       <div>
         <i class="fa-solid fa-signal fa-xs"></i>
         <i class="fa-solid fa-wifi fa-xs"></i>
@@ -91,5 +91,6 @@
       src="https://kit.fontawesome.com/2cb7ce3cc7.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/common.js"></script>
   </body>
 </html>
